--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,12 @@ find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
 
 file(GLOB SOURCES "*.cpp")
 add_executable(gaming_coffee_table_cpp ${SOURCES}
-        engine/engine.cpp
-        engine/Engine.h
-        engine/Actor.cpp
-        engine/Actor.h
+        engine/Engine.hpp
+        engine/Actor.hpp
         engine/v2.cpp
-        engine/v2.h)
+        engine/v2.hpp
+        engine/Matrix.cpp
+        engine/Matrix.hpp
+        engine/Color.hpp
+)
 target_link_libraries(gaming_coffee_table_cpp sfml-graphics sfml-window sfml-system)
