renamed engine to src

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,23 +7,23 @@ find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
 
 add_executable(gaming_coffee_table_cpp
         main.cpp
-        engine/engine.hpp
-        engine/v2.hpp
-        engine/matrix.hpp
-        engine/color.hpp
-        engine/input/input.hpp
-        engine/input/keyboard_input_provider.hpp
-        engine/input/input_provider.hpp
-        engine/input/key.hpp
-        engine/input/key_state.hpp
-        engine/scene.hpp
-        engine/scenes/menu/menu-scene.hpp
-        engine/actors/rectangle-actor.hpp
-        engine/actors/arrow-actor.hpp
-        engine/actor.hpp
-        engine/actor.cpp
-        engine/engine.cpp
-        engine/scenes/menu/menu-scene.cpp
-        engine/actors/rectangle-actor.cpp
+        src/engine.hpp
+        src/v2.hpp
+        src/matrix.hpp
+        src/color.hpp
+        src/input/input.hpp
+        src/input/keyboard_input_provider.hpp
+        src/input/input_provider.hpp
+        src/input/key.hpp
+        src/input/key_state.hpp
+        src/scene.hpp
+        src/scenes/menu/menu-scene.hpp
+        src/actors/rectangle-actor.hpp
+        src/actors/arrow-actor.hpp
+        src/actor.hpp
+        src/actor.cpp
+        src/engine.cpp
+        src/scenes/menu/menu-scene.cpp
+        src/actors/rectangle-actor.cpp
 )
 target_link_libraries(gaming_coffee_table_cpp sfml-graphics sfml-window sfml-system)
