--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,5 +51,6 @@ add_executable(gaming_coffee_table_cpp
         src/scenes/tetris/tetris_board_actor.h
         src/coroutine/task.hpp
         src/coroutine/wait_for_ms.hpp
+        src/scenes/tetris/hold_logic.cpp
 )
 target_link_libraries(gaming_coffee_table_cpp sfml-graphics sfml-window sfml-system)
