--- a/esp32/main/CMakeLists.txt
+++ b/esp32/main/CMakeLists.txt
@@ -16,6 +16,7 @@ idf_component_register(
         REQUIRES
         hub75
         log
+        pthread
 )
 
 target_compile_options(${COMPONENT_LIB} PRIVATE -std=gnu++20 -Wno-error=reorder -Wno-error=changes-meaning)
